k8s-manifests/kr-server/service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kr-server
  namespace: kr
  labels:
    app: kr-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kr-server
  template:
    metadata:
      labels:
        app: kr-server
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: kr-server
          image: ghcr.io/kroshhaker2/kr-server:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: kr-server
  namespace: kr
spec:
  type: NodePort
  selector:
    app: kr-server
  ports:
    - name: http
      port: 3000
      targetPort: http
      nodePort: 30080
