k8s-manifests/kr-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kr-server
  namespace: kr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.kr.kroshhaker.dev
      secretName: kr-server-tls
  rules:
    - host: api.kr.kroshhaker.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kr-server
                port:
                  number: 3000
